# P1

./: README.md
barchart-race/: .gitignore  author.md
barchart-race/data/: covid19_people_fully_vacc.csv
barchart-race/source/: CMakeLists.txt  barchart.cpp  barchart.h  bcr_am.cpp  bcr_am.h  database.cpp  database.h  main.cpp
barchart-race/source/libs/: CLI.cpp  CLI.h  tokenizer.cpp  tokenizer.h
bares/: .gitignore  author.md
bares/data/: entrada-01.txt  entrada-pdf.txt  saida-01.txt  saida-pdf.txt
bares/source/: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp
bares/source/lib/: parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
cowsay/: README.md  author.md
cowsay/source/: CMakeLists.txt
cowsay/source/core/: CLI.cpp  CLI.h  animal.cpp  animal.h  billboard.cpp  billboard.h  main.cpp  tokenizer.cpp  tokenizer.h
cowsay/source/libs/: text_color.h
pig-dice/: README.md  author.md
pig-dice/src/: dice.cpp  dice.h  main.cpp  pigdice_common.h  pigdice_game.cpp  pigdice_game.h  player.cpp  player.h
snaze/: author.md
snaze/source/: CMakeLists.txt  main.cpp  simulation.cpp  simulation.h
snaze/source/lib/: CLI.cpp  CLI.h  level.cpp  level.h  snake.cpp  snake.h  text_color.h
sudoku/: README.md  author.md
sudoku/data/: input.txt
sudoku/source/: CMakeLists.txt
sudoku/source/core/: gm_auxiliary_func.cpp  main.cpp  sudoku_board.cpp  sudoku_board.h  sudoku_gm.cpp  sudoku_gm.h
sudoku/source/lib/: CLI.cpp  CLI.h  text_color.h  tokenizer.cpp  tokenizer.h
